Fixed issue in app/build.gradle after testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
     androidTestImplementation libs.espresso.core
     //cloudinary sdk
     implementation 'com.cloudinary:cloudinary-android:3.0.2'
-    annotationProcessor 'com.github.bumptech.glide:complier:4.14.2'
+    //annotationProcessor 'com.github.bumptech.glide:complier:4.14.2'
 
 }
