--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,11 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     //cloudinary sdk
-    implementation 'com.cloudinary:cloudinary-android:3.0.2'
-    //annotationProcessor 'com.github.bumptech.glide:complier:4.14.2'
+    dependencies {
+        implementation 'com.cloudinary:cloudinary-android:3.0.2'
+        implementation 'com.github.bumptech.glide:glide:4.15.1'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    }
+
 
 }
