--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
         implementation 'com.cloudinary:cloudinary-android:3.0.2'
         implementation 'com.github.bumptech.glide:glide:4.15.1'
         annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+        implementation 'com.github.clans:fab:1.6.4'
     }
 
 
