--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
         implementation 'com.google.firebase:firebase-database:20.2.2'
         implementation 'com.google.firebase:firebase-auth:22.1.1'
         implementation 'com.github.clans:fab:1.6.4'
+        implementation 'com.google.android.material:material:1.9.0'
+
     }
 
 
