--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryLand"
         tools:targetApi="31">
-        <activity 
+        <activity
+            android:name=".UsersListActivity"
+            android:exported="false" />
+        <activity
             android:name=".Hist_BorrowActivity"
             android:exported="false" />
         <activity
@@ -69,6 +72,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <receiver
             android:name=".SystemEventReceiver"
             android:enabled="true"
@@ -76,10 +80,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.TIME_SET" />
-                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
-                <action android:name="android.intent.action.TIME_CHANGED"/>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIME_CHANGED" />
                 <action android:name="android.intent.action.DATE_CHANGED" />
-
             </intent-filter>
         </receiver>
     </application>
