--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryLand"
         tools:targetApi="31">
+        <activity
+            android:name=".UsersListActivity"
+            android:exported="false" />
         <activity 
             android:name=".Hist_BorrowActivity"
             android:exported="false" />
